scripts/start-ocp-console/ocp-bridge-service-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cluster-aas-operator-repo-bridge-service-route
  namespace: cluster-aas-operator
  labels:
    caas-repo-bridge: 'true'
    operators.coreos.com/cluster-aas-operator.cluster-aas-operator: ''
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: >-
    claas-helm-repo-cluster-aas-operator.apps.rawagner3.cyty.p1.openshiftapps.com
  to:
    kind: Service
    name: cluster-aas-operator-repo-bridge-service
    weight: 100
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
